View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027162 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-02-16 14:02 | 2016-04-20 15:50 |
Reporter | aml | Assigned To | abv | ||
Priority | high | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027162: Draw command "(2d)extrema" incorrectly represent underlying algorithm results | ||||
Description | This issue was found in scope of #27131 bug. test bugs modalg_5 bug23706_10: "Infinite number of extremas, distance = 0 No solutions!" bugs modalg_5 bug23706_13: "No solutions!" | ||||
Steps To Reproduce | test bugs modalg_5 bug23706_10 test bugs modalg_5 bug23706_13 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5 bug23706_10, bug23706_13 | ||||
|
Branch CR27162 has been created by aml. SHA-1: 77d94086b6786e3ff2203948e267d7d3c42be305 Detailed log of new commits: Author: aml Date: Tue Feb 16 15:47:38 2016 +0300 0027162: Draw command "(2d)extrema" incorrectly represent underlying algorithm results Correct handling of infinity solutions added for Curve / Curve case. Unused code deleted. |
|
Branch CR27162 has been updated forcibly by aml. SHA-1: 9b9d34ae1d42cb938fc23a0fdbc4a92b5ac70b76 |
|
Branch CR27162 has been updated forcibly by aml. SHA-1: ffdb3d900d3218f3b55901b7ae20126eef70db02 |
|
Dear msv, Please check current state of branch CR27162. |
|
Reviewed. |
|
Branch CR27162 has been updated forcibly by apv. SHA-1: 6c2372cd5a8c7c9e55e13d5ae3a6eb6573afe0df |
|
Branch CR27162 has been rebased on the current master |
|
Dear BugMaster, Branch CR27162 was tested together with CR27131_2. Results of test-cases are: bugs modalg_5 bug23706_10 - OK: http://occt-tests/CR27131-2-master-occt-64/Debian70-64/bugs/modalg_5/bug23706_10.html http://occt-tests/CR27131-2-master-occt-64/Windows-64-VC10/bugs/modalg_5/bug23706_10.html bugs modalg_5 bug23706_13 - OK: http://occt-tests/CR27131-2-master-occt-64/Debian70-64/bugs/modalg_5/bug23706_13.html http://occt-tests/CR27131-2-master-occt-64/Windows-64-VC10/bugs/modalg_5/bug23706_13.html |
|
Branch CR27162 has been deleted by kgv. SHA-1: 6c2372cd5a8c7c9e55e13d5ae3a6eb6573afe0df |
occt: master 92a206a3 2016-02-16 12:47:38 Committer: abv Details Diff |
0027162: Draw command "(2d)extrema" incorrectly represent underlying algorithm results Correct handling of infinity solutions added for Curve / Curve case. Unused code deleted. Test cases updated to the new behavior. |
Affected Issues 0027162 |
|
mod - src/Extrema/Extrema_ExtCC2d.cxx | Diff File | ||
mod - src/GeometryTest/GeometryTest_API2dCommands.cxx | Diff File | ||
mod - src/GeometryTest/GeometryTest_APICommands.cxx | Diff File | ||
mod - src/GeomliteTest/GeomliteTest_API2dCommands.cxx | Diff File | ||
mod - tests/bugs/modalg_6/bug26075 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-02-16 14:02 | aml | New Issue | |
2016-02-16 14:02 | aml | Assigned To | => msv |
2016-02-16 14:02 | aml | Relationship added | child of 0026269 |
2016-02-16 14:12 | aml | Assigned To | msv => aml |
2016-02-16 14:56 | msv | Status | new => assigned |
2016-02-16 20:49 | abv | Target Version | 7.0.0 => 7.1.0 |
2016-02-17 07:19 | git | Note Added: 0050851 | |
2016-02-17 07:49 | git | Note Added: 0050853 | |
2016-02-17 09:56 | git | Note Added: 0050857 | |
2016-02-17 09:56 | aml | Note Added: 0050858 | |
2016-02-17 09:56 | aml | Assigned To | aml => msv |
2016-02-17 09:56 | aml | Status | assigned => resolved |
2016-02-17 17:13 | msv | Note Added: 0050897 | |
2016-02-17 17:13 | msv | Assigned To | msv => bugmaster |
2016-02-17 17:13 | msv | Status | resolved => reviewed |
2016-02-17 17:22 |
|
Assigned To | bugmaster => apv |
2016-02-17 17:46 | abv | Target Version | 7.1.0 => 7.0.0 |
2016-02-17 17:47 | msv | Priority | normal => high |
2016-02-17 18:12 | git | Note Added: 0050910 | |
2016-02-17 18:13 |
|
Note Added: 0050911 | |
2016-02-18 11:49 |
|
Test case number | => bugs modalg_5 bug23706_10, bug23706_13 |
2016-02-18 11:53 |
|
Note Added: 0050931 | |
2016-02-18 11:53 |
|
Assigned To | apv => bugmaster |
2016-02-18 11:53 |
|
Status | reviewed => tested |
2016-02-18 11:53 |
|
Note Edited: 0050931 | |
2016-02-18 11:54 |
|
Note Edited: 0050931 | |
2016-02-21 08:52 | abv | Changeset attached | => occt master 92a206a3 |
2016-02-21 08:52 | abv | Assigned To | bugmaster => abv |
2016-02-21 08:52 | abv | Status | tested => verified |
2016-02-21 08:52 | abv | Resolution | open => fixed |
2016-04-17 13:40 | git | Note Added: 0052901 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |