0027162: Draw command "(2d)extrema" incorrectly represent underlying algorithm results

Correct handling of infinity solutions added for Curve / Curve case.
Unused code deleted.
Test cases updated to the new behavior.